--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -51,6 +51,13 @@
             name="year"
             ng-model="user.profile.graduationYear">
             <option value="">Graduation Year</option>
+             <option value="2009">2016</option>
+             <option value="2010">2016</option>
+             <option value="2011">2016</option>
+             <option value="2012">2016</option>
+             <option value="2013">2016</option>
+             <option value="2014">2016</option>
+             <option value="2015">2016</option>
             <option value="2016">2016</option>
             <option value="2017">2017</option>
             <option value="2018">2018</option>
@@ -80,7 +87,7 @@
 
         <div class="field">
           <label>
-              What would you like to learn or get out of HackMIT? (optional)
+              What would you like to learn or get out of LegalHackers KL? (optional)
           </label>
           <textarea ng-model="user.profile.essay">
           </textarea>
@@ -88,15 +95,8 @@
 
         <div class="field"
              ng-hide="isMitStudent">
-          <p>
-            Because of limitations imposed by MIT, we are not legally allowed to host
-            non-MIT minors (those under 18) for HackMIT 2015. Checking the box below affirms that you are or will be 18 years or older by September 19th, 2015.
-          </p>
-          <p>
-            <strong>
-            We will be checking ID. If you are a non-MIT minor, you will be turned away at the door.
-            </strong>
-          </p>
+          
+          
           <div class="ui checkbox">
             <input type="checkbox" id="adult" ng-model="user.profile.adult">
             <label for="adult">I am 18 or older.</label>
