--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -110,6 +110,13 @@
           name="year"
           ng-model="selectedUser.profile.graduationYear">
           <option value="">Graduation Year</option>
+           <option value="2009">2016</option>
+           <option value="2010">2016</option>
+           <option value="2011">2016</option>
+           <option value="2012">2016</option>
+           <option value="2013">2016</option>
+           <option value="2014">2016</option>
+           <option value="2015">2016</option>
           <option value="2016">2016</option>
           <option value="2017">2017</option>
           <option value="2018">2018</option>
